# vandalizer

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DEPLOY.md  Makefile  README.md  compose.yaml  deploy.sh  setup.sh  wcag_report_findings_pass1.md  wcag_report_findings_pass2.md  wcag_report_findings_pass3.md  wcag_report_findings_pass5.md
backend/: .env.example  Dockerfile  bootstrap_install.py  celery_worker.py  pyproject.toml  run_celery.sh
backend/app/: celery_app.py  config.py  database.py  main.py  observability.py
backend/app/middleware/: csrf.py
backend/app/models/: activity.py  approval.py  credential.py  demo.py  document.py  extraction_optimization_run.py  kb_test_query.py  knowledge.py  library.py  llm_usage.py  project.py  search_set.py  support.py  system_config.py  team.py  telemetry.py  verification.py  workflow.py
backend/app/routers/: admin.py  audit.py  auth.py  automations.py  chat.py  config.py  credentials.py  demo.py  documents.py  extractions.py  files.py  knowledge.py  library.py  mgmt.py  projects.py  reviews.py  (+5 more)
backend/certification-data/: exercises.json
backend/scripts/: reocr_old_documents.py  seed_catalog.py
backend/tests/: test_access_control.py  test_admin_routes.py  test_auth_routes.py  test_auth_service.py  test_automations_api_integration.py  test_certification_extraction_fields.py  test_classification_service.py  test_context_budget.py  test_credentials_routes.py  test_credentials_service.py  test_csrf_middleware.py  test_document_pipeline.py  test_document_tasks.py  test_export_import_service.py  test_extraction_judge.py  test_extraction_optimizer.py  test_extraction_prompt_variants.py  test_extraction_test_case_generator.py  test_extraction_tuning_service.py  test_extractions_api_ephemeral.py  test_extractions_routes.py  test_files_routes.py  test_kb_optimization_routes.py  test_kb_optimizer.py  test_kb_validation_service.py  test_knowledge_base_tasks.py  test_knowledge_routes.py  test_library_service.py  test_llm_service.py  test_metering.py  test_mgmt_api.py  test_model_probe.py  test_passive_tasks.py  test_pdf_service.py  test_project_service.py  test_quality_service.py  test_reviews_routes.py  test_search_set_service.py  test_support_service_helpers.py  test_team_service.py  (+15 more)
(+339 files in other folders)
