[project]
name = "vandalizer-next-backend"
version = "0.1.0"
description = "Vandalizer Next - FastAPI backend"
requires-python = ">=3.11,<3.13"
dependencies = [
    "fastapi>=0.115,<1",
    "uvicorn[standard]>=0.34,<1",
    "beanie>=1.27,<3",
    "motor>=3.6,<4",
    "pydantic-settings>=2.7,<3",
    "PyJWT[crypto]>=2.12,<3",
    "werkzeug>=3.1,<4",
    "python-multipart>=0.0.18,<1",
    "celery[redis]>=5.4,<6",
    "pydantic-ai-slim[openai,anthropic]>=1.56,<2",
    "pymongo>=4.0,<5",
    "chromadb>=0.5,<1.6",
    "httpx>=0.27,<1",
    "beautifulsoup4>=4.12,<5",
    "trafilatura>=1.12,<3",
    "playwright>=1.49,<2",
    "aiosmtplib>=3.0,<6",
    "PyPDF2>=3.0,<4",
    "pypandoc>=1.13,<2",
    "markitdown[docx,pptx,xlsx]>=0.1,<1",
    "python-docx>=1.1,<2",
    "defusedxml>=0.7,<1",
    "formulas>=1.2,<2",
    "reportlab>=4.0,<5",
    "markdownify>=0.13,<1",
    "msal>=1.28,<2",
    "redis>=5.0,<9",
    "slowapi>=0.1,<1",
    "fpdf2>=2.8.7,<3",
    "sentry-sdk[fastapi,celery]>=2.0,<3",
    "python-json-logger>=3.0,<5",
    "python3-saml>=1.16,<2",
    "croniter>=1.3,<3",
    "prometheus-fastapi-instrumentator>=7.0,<9",
    "pymupdf>=1.27.2",
    "tiktoken>=0.9,<1",
    "langchain-text-splitters>=0.3,<2",
]

[project.optional-dependencies]
s3 = [
    "aioboto3>=13.0",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=7.0,<8",
    "httpx>=0.27",
    "mypy>=1.10",
    "ruff>=0.11,<1",
    "bandit>=1.8,<2",
    "pip-audit>=2.9,<3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "integration_tier1: Integration tests needing no external services",
    "integration_tier2: Integration tests requiring MongoDB",
    "integration_tier3: Integration tests requiring LLM API key",
    "integration_tier4: Integration tests exercising ChromaDB (PersistentClient or HttpClient)",
]

[tool.mypy]
python_version = "3.12"
strict = false
ignore_missing_imports = true
disallow_untyped_defs = true
warn_return_any = true
warn_unused_ignores = true
exclude = ["tests/", "deprecated/"]
